include alert message for max width 700px

--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
   <title>Jeu de Dé en ligne</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="header">
+      <h1>Jeu de Dé</h1>
+    </div>
+    <div class="alert">
+      <div class="img_alert">
+        <img src="/images/death.png" alt="death">
+      </div>
+      <div class="message_alert">
+        Attention vérifier votre taille d'écran!! Basculer en mode paysage
+      </div>
+      <div class="img_landscape">
+        <img src="/images/mobile-landscape-mode-icon.svg" alt="landscape">
+      </div>
+    </div>
+  </div>
 
 
 
