--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="/ressources/Images/Lato/Lato-Regular.ttf">
+  <link rel="preconnect" href="/images/Lato/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="style/style.css">
   <title>Jeu de Dé en ligne</title>
@@ -14,6 +14,7 @@
     <div class="header">
       <h1>Jeu de Dé</h1>
     </div>
+    <!-- Message d'alerte pour les petits écran  -->
     <div class="alert">
       <div class="img_alert">
         <img src="/images/death.png" alt="death">
@@ -23,6 +24,58 @@
       </div>
       <div class="img_landscape">
         <img src="/images/mobile-landscape-mode-icon.svg" alt="landscape">
+      </div>
+    </div>
+    <div class="game_platform">
+      <div class="player_one active">
+        <div class="player_name1">player 1</div>
+        <div class="score1">43</div>
+        <div class="currentbox_1">
+          <div class="current_label">Current</div>
+          <div class="current_score1">11</div>
+        </div>
+      </div>
+      <div class="control_panel">
+        <div class="new_game">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi text-danger bi-plus-circle " viewBox="0 0 16 16" type="button">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+          </svg>
+          <button type="button" class="btn" id="btn_newGame">
+            NEW GAME
+          </button>
+        </div>
+        <div class="img_dice">
+          <img src="/images/Dé/dice1.png" alt="dé">
+        </div>
+        <div class="btn_play_control">
+          <div class="roll">
+            <svg  xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi text-danger bi-arrow-repeat" viewBox="0 0 16 16" type="button" >
+              <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
+              <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
+            </svg>
+            <button type="button" class="btn" id="btn_roll">
+              ROLL DICE
+            </button>  
+          </div>
+          <div class="hold">
+            <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi text-danger bi-box-arrow-in-down" viewBox="0 0 16 16" type="button">
+              <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg>
+            <button type="button" class="btn" id="btn_hold">
+              HOLD
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="player_two">
+        <div class="player_name2">player 2</div>
+        <div class="score2">72</div>
+        <div class="current_box_2">
+          <div class="current_label">Current</div>
+          <div class="current_score2">0</div>
+        </div>
       </div>
     </div>
   </div>
