--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="player_name" id="player_1">player 1</div>
         <div class="player_score" id="score_1">43</div>
         <div class="player_current_box">
-          <div class="current_label">Current</div>
+          <div class="current_label">current</div>
           <div class="current_score1" id="current_1">11</div>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <div class="player_name" id="player_2">player 2</div>
         <div class="player_score" id="score_2">72</div>
         <div class="player_current_box">
-          <div class="current_label">Current</div>
+          <div class="current_label">current</div>
           <div class="current_score2" id="current_2">10</div>
         </div>
       </div>
@@ -52,23 +52,17 @@
 
         <div class="new_game">
           <button type="button" class="btn" id="btn_newGame">
-            <i class="bi bi-plus-circle"></i> NEW GAME
+            <i class="bi bi-plus-circle"></i> new game
           </button>
         </div>
         <img src="/images/Dé/dice_1.png" class="dice" alt="dé">
-        
         <div class="btn_play_control">
-          <div class="roll">
-            <button type="button" class="btn-roll" id="btn_roll">
-              <i class="bi bi-arrow-repeat"></i> ROLL DICE
-            </button>  
-          </div>
-
-          <div class="hold">
-            <button type="button" class="btn" id="btn_hold">
-              <i class="bi bi-box-arrow-in-down"></i> HOLD
-            </button>
-          </div>
+          <button type="button" class="btn" id="btn-roll">
+            <i class="bi bi-arrow-repeat"></i> roll dice
+          </button>
+          <button type="button" class="btn" id="btn-hold">
+            <i class="bi bi-box-arrow-in-down"></i> hold
+          </button>
         </div>
       </div>
       
