declaration of the variable Init and launch of dice / dice operational

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         </div>
         <img src="/images/Dé/dice_1.png" class="dice" alt="dé">
         <div class="btn_play_control">
-          <button type="button" class="btn" id="btn-roll">
+          <button type="button" class="btn" id="btn_roll">
             <i class="bi bi-arrow-repeat"></i> roll dice
           </button>
-          <button type="button" class="btn" id="btn-hold">
+          <button type="button" class="btn" id="btn_hold">
             <i class="bi bi-box-arrow-in-down"></i> hold
           </button>
         </div>
