resolve pb btn hold with change id=score_1 and current_1 by score_0  and current_0; btn hold functional

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 
       <div class="player_one_control active">
         <div class="player_name" id="player_1">player 1</div>
-        <div class="player_score" id="score_1">43</div>
+        <div class="player_score" id="score_0">43</div>
         <div class="player_current_box">
           <div class="current_label">current</div>
-          <div class="current_score1" id="current_1">11</div>
+          <div class="current_score1" id="current_0">11</div>
         </div>
       </div>
 
       <div class="player_two_control ">
         <div class="player_name" id="player_2">player 2</div>
-        <div class="player_score" id="score_2">72</div>
+        <div class="player_score" id="score_1">72</div>
         <div class="player_current_box">
           <div class="current_label">current</div>
-          <div class="current_score2" id="current_2">10</div>
+          <div class="current_score2" id="current_1">10</div>
         </div>
       </div>
 
@@ -57,10 +57,10 @@
         </div>
         <img src="/images/Dé/dice_1.png" class="dice" alt="dé">
         <div class="btn_play_control">
-          <button type="button" class="btn" id="btn_roll">
+          <button class="btn" id="btn_roll">
             <i class="bi bi-arrow-repeat"></i> roll dice
           </button>
-          <button type="button" class="btn" id="btn_hold">
+          <button class="btn-hold" id="btn_hold">
             <i class="bi bi-box-arrow-in-down"></i> hold
           </button>
         </div>
