--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="/images/Lato/">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style/style.css">
   <title>Jeu de Dé en ligne</title>
@@ -29,7 +28,7 @@
     </div>
     <div class="game_platform">
 
-      <div class="player_one_control active">
+      <div class="player_0_control active">
         <div class="player_name" id="player_0">player 1</div>
         <div class="player_score" id="score_0">43</div>
         <div class="player_current_box">
@@ -38,7 +37,7 @@
         </div>
       </div>
 
-      <div class="player_two_control ">
+      <div class="player_1_control ">
         <div class="player_name" id="player_1">player 2</div>
         <div class="player_score" id="score_1">72</div>
         <div class="player_current_box">
@@ -55,9 +54,12 @@
             <i class="bi bi-plus-circle"></i> new game
           </button>
         </div>
-        <img src="/images/Dé/dice_1.png" class="dice" alt="dé">
+          <iframe src="https://giphy.com/embed/RMThpsEE6yewWWixor" title=" win cotillon"  
+          class="cotillon">
+          </iframe>
+          <img src="/images/Dé/dice_1.png" class="dice" alt="dé">
         <div class="btn_play_control">
-          <button class="btn" id="btn_roll">
+          <button class="btn-roll" id="btn_roll">
             <i class="bi bi-arrow-repeat"></i> roll dice
           </button>
           <button class="btn-hold" id="btn_hold">
@@ -65,8 +67,6 @@
           </button>
         </div>
       </div>
-      
-      
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
